tests/snapshots/snapshots__check_missing_config_piped.snap
---
source: tests/snapshots.rs
expression: run.stderr
---
no config found
  looked in ~/.config/niwa
  run `niwa init` to scan this machine into a starter config
  or clone your config repo to ~/.config/niwa
