tests/snapshots/snapshots__check_unguarded_piped.snap
---
source: tests/snapshots.rs
expression: head
---
the config failed to load
  runtime error: init.luau:2: niwa.run: a command needs a guard: add `unless`, `only_if`, or `creates` so the run can be skipped when it is already done
  --> init.luau:2
   |  niwa.run("echo hi")
   |  ^^^^^^^^^^^^^^^^^^^
