tests/snapshots/snapshots__plan_pending_piped.snap
---
source: tests/snapshots.rs
expression: run.stdout
---
[shell]
~/.zshrc
[desktop]
com.apple.dock autohide   false → true
3 checked · 2 would change
