tests/snapshots/snapshots__the_dashboard_screen_answers_in_one_look.snap
---
source: tests/snapshots.rs
expression: run.stdout
---
niwa · 3 resources

2 would change · file:~/.zshrc
