tests/snapshots/snapshots__the_explain_screen_prints_the_model_for_one_resource.snap
---
source: tests/snapshots.rs
expression: run.stdout
---
defaults com.apple.dock autohide
declared     true    modules/desktop.luau:2
actual       false
acknowledged never applied here
