tests/snapshots/snapshots__the_machines_screen_reads_the_fleet_from_stamps.snap
---
source: tests/snapshots.rs
expression: run.stdout
---
  laptop    applied [ago]       (no commit)   12 resources
  workbox   applied [ago]       (no commit)   40 resources
